# CascadeForge

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  batch_edit_ac.py  config.example.json  organize_results_ac.py  preprocess_ac.py  process_vl_ac.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
cascadeforge/: __init__.py  cli.py  config.py  editor.py  organize.py  preprocess.py  sanitize.py  select.py
tests/: test_editor.py  test_pipeline.py
